--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "lucide-react": "^0.555.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-dropzone": "^14.3.8",
         "tailwind-merge": "^3.4.0"
     }
 }
