add: Image Uploader

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,11 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    <IfModule mod_php.c>
+        php_value upload_max_filesize 10M
+        php_value post_max_size 10M
+    </IfModule>
+
     RewriteEngine On
 
     # Handle Authorization Header
