--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "framer-motion": "^12.23.24",
         "lucide-react": "^0.555.0",
         "react": "^19.2.0",
+        "react-datepicker": "^8.10.0",
         "react-dom": "^19.2.0",
         "react-dropzone": "^14.3.8",
         "tailwind-merge": "^3.4.0"
