--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@inertiajs/react": "^2.2.18",
+        "@tailwindcss/typography": "^0.5.19",
         "@vitejs/plugin-react": "^5.1.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.23.24",
@@ -32,6 +33,7 @@
         "react-datepicker": "^8.10.0",
         "react-dom": "^19.2.0",
         "react-dropzone": "^14.3.8",
+        "react-markdown": "^10.1.0",
         "tailwind-merge": "^3.4.0"
     }
 }
